--- a/EvaluateModels.ipynb
+++ b/EvaluateModels.ipynb
@@ -438,7 +438,7 @@
     }
    ],
    "source": [
-    "#model = load_model('TestModel.h5')\n",
+    "model = load_model('TestModel.h5')\n",
     "scores = model.evaluate(x_test, y_test_hard, batch_size=128, verbose=0)\n",
     "print('\\nTest result: %.3f loss: %.3f' % (scores[1]*100,scores[0]))"
    ]
